# moduflow

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  benchmark.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  verify_env.py
server/: __init__.py  app.py  graders.py  moduflow_environment.py  requirements.txt  test_graders_unit.py
tasks/: easy.json  hard.json  medium.json
